# docker_application_template

./: .gitignore  README.md
application/: README.md  dockerfile  pyproject.toml
application/src/: main.py
application/src/factories/: storage_factory.py
application/src/services/: containers.py  storage_account.py
